concord_macros/tests/trybuild/fail/codegen/websocket_http_get_response.rs
use concord_macros::api;

api! {
    client WebSocketHttpGetResponseApi {
        base "https://example.com"
    }

    GET Connect
        path ["connect"]
        -> WebSocket<String, String>
}

fn main() {}
