concord_macros/tests/trybuild/fail/codegen/websocket_http_get_response.stderr
error: `WebSocket` endpoint I/O is only valid for `WS` endpoints
  --> tests/trybuild/fail/codegen/websocket_http_get_response.rs:10:12
   |
10 |         -> WebSocket<String, String>
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^
